ui/scss/component/_file-render.scss
/* ... */
.vjs-big-play-button {
  display: none;
}

.video-js {
  height: 100%;
  width: 100%;

  .vjs-modal-dialog .vjs-modal-dialog-content {
    position: relative;
    padding-top: 5rem;
    // Make sure no videojs message interferes with overlaying buttons
    pointer-events: none;
  }

  // control-bar: time
  .vjs-control-bar {
    .vjs-volume-panel {
      .vjs-volume-horizontal {
        margin-top: 5.5px !important;
        height: $control-bar-height !important;
        @media (max-width: $breakpoint-small) {
          height: $control-bar-height-mobile !important;
        }
      }
      &:hover {
        .vjs-volume-horizontal {
          margin-top: 5.5px !important;
          height: $control-bar-height !important;
          @media (max-width: $breakpoint-small) {
            height: $control-bar-height-mobile !important;
          }
        }
      }
    }

    .vjs-time-control {
      margin-left: var(--spacing-xs);
      line-height: $control-bar-height;
      font-size: $control-bar-font-size;
      display: flex;
      @media (max-width: $breakpoint-small) {
        line-height: $control-bar-height-mobile !important;
      }
    }

    .vjs-current-time {
      padding-right: 0;
      @media (max-width: $breakpoint-small) {
        margin-right: 0.2rem;
      }
    }

    .vjs-time-divider {
      min-width: unset;
      padding: 0;
      z-index: 0; // solves the grayed-out divider
    }

    .vjs-duration {
      padding-left: 0;
      margin-left: var(--spacing-xs);
      @media (max-width: $breakpoint-small) {
        margin-left: var(--spacing-xs) !important;
      }
    }
  }

  // control-bar: menu, button and icon
  .vjs-control-bar {
    .vjs-menu-button {
      font-size: $control-bar-font-size;
      line-height: $control-bar-height;
    }

    .vjs-icon-placeholder {
      line-height: $control-bar-height;
    }

    .vjs-icon-placeholder::before {
      font-size: $control-bar-icon-size;
      line-height: $control-bar-height;
      @media (max-width: $breakpoint-small) {
        line-height: $control-bar-height-mobile !important;
      }
    }

    .vjs-quality-selector {
      margin-left: var(--spacing-xs);
      .vjs-icon-placeholder {
        font-size: $control-bar-font-size;
        span {
          display: block;
          margin-top: -3px;
          span {
            display: block;
            margin-left: 24%;
            margin-right: 24%;
            font-size: 0.6rem;
            background: var(--color-primary);
            font-weight: var(--font-weight-bold);
            border-radius: 4px;
            margin-top: -1px;
            padding-top: 0;
            line-height: 13px;
            white-space: nowrap;
          }
        }
      }
      @media (max-width: $breakpoint-small) {
        width: 3.3rem;
        .vjs-icon-placeholder {
          span {
            span {
              margin-left: 20%;
              margin-right: 20%;
            }
          }
        }
      }
    }

    .vjs-play-control,
    .vjs-fullscreen-control {
      .vjs-icon-placeholder {
        // Compensate: these icons in Font VideoJs are smaller than their peers.
        &:before {
          font-size: calc(#{$control-bar-icon-size} * 1.1);
        }
      }
    }

    div.vjs-playback-rate {
      margin-right: calc(var(--spacing-xs) * -1);
      .vjs-playback-rate-value {
        font-size: $control-bar-font-size;
        line-height: $control-bar-height;
      }

      .vjs-menu {
        width: 10em; // Extend the width to prevent a potential scrollbar from blocking the text.
        left: -3em; // Center the popup on top of the button that invoked it.
      }

      @media (max-width: $breakpoint-small) {
        margin-right: calc(var(--spacing-xs) * -1) !important;
        width: 3rem;
        .vjs-playback-rate-value {
          line-height: $control-bar-height-mobile;
        }
      }
    }

    div.vjs-chapters-button {
      right: calc(var(--spacing-xs) * -1);
      .vjs-menu {
        min-width: 12em;
        max-width: 19em;
        left: -3em;
      }

      li {
        text-align: left;
        padding: var(--spacing-xxxs) var(--spacing-s);
      }
      @media (max-width: $breakpoint-small) {
        width: 3em;
        right: 0;
      }
    }
    button.vjs-chapters-button {
      display: block;
      margin-top: -0px;
    }

    .vjs-snapshot-button {
      margin-right: 8px;
      svg {
        height: 19px;
        margin-top: 3px;
        fill: transparent;
        stroke-width: 50px;
        stroke: white;
        opacity: 0.9;
      }
    }
  }

  .vjs-control-bar {
    .vjs-button--play-previous:first-child,
    .vjs-play-control:first-child {
      margin-left: var(--spacing-s);
      @media (max-width: $breakpoint-small) {
        margin-left: 0;
      }
    }

    .vjs-fullscreen-control {
      margin-right: var(--spacing-s);
      @media (max-width: $breakpoint-small) {
        width: 2.5rem;
        margin-right: 0;
      }
    }

    .vjs-button--play-previous,
    .vjs-button--play-next,
    .vjs-mute-control {
      .vjs-icon-placeholder::before {
        font-size: 26px !important;
        font-size: $control-bar-icon-size;
      }
      @media (max-width: $breakpoint-small) {
        width: 2.25rem;
      }
    }

    .vjs-button--play-next {
      margin-left: var(--spacing-xs);
      margin-right: var(--spacing-xs);
    }

    .vjs-button--play-previous ~ .vjs-button--play-next {
      margin-left: 0 !important;
      margin-right: 0 !important;
    }

    .vjs-button--play-previous:first-child {
      margin-left: var(--spacing-xs) !important;
    }

    .vjs-button--play-next ~ .vjs-volume-panel {
      display: none !important;
    }

    .vjs-button--play-next ~ .vjs-remaining-time,
    .vjs-button--play-next ~ .vjs-duration {
      flex-shrink: 0 !important;
      padding-right: var(--spacing-s) !important;
    }
  }

  .vjs-picture-in-picture-control {
    display: none;
  }
}
/* ... */

